<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/one_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/one_button"
        app:layout_constraintEnd_toStartOf="@+id/two_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/two_button"
        app:layout_constraintEnd_toStartOf="@+id/three_button"
        app:layout_constraintStart_toEndOf="@+id/one_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/three_button"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintStart_toEndOf="@+id/two_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/four_button"
        app:layout_constraintEnd_toStartOf="@+id/five_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_button" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/five_button"
        app:layout_constraintEnd_toStartOf="@+id/six_button"
        app:layout_constraintStart_toEndOf="@+id/four_button"
        app:layout_constraintTop_toBottomOf="@+id/two_button" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/six_button"
        app:layout_constraintEnd_toStartOf="@+id/minus_button"
        app:layout_constraintStart_toEndOf="@+id/five_button"
        app:layout_constraintTop_toBottomOf="@+id/three_button" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/seven_button"
        app:layout_constraintEnd_toStartOf="@+id/eight_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_button" />

    <Button
        android:id="@+id/eight_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eight_button"
        app:layout_constraintEnd_toStartOf="@+id/nine_button"
        app:layout_constraintStart_toEndOf="@+id/seven_button"
        app:layout_constraintTop_toBottomOf="@+id/five_button" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nine_button"
        app:layout_constraintEnd_toStartOf="@+id/zero_button"
        app:layout_constraintStart_toEndOf="@+id/eight_button"
        app:layout_constraintTop_toBottomOf="@+id/six_button" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zero_button"
        app:layout_constraintEnd_toStartOf="@+id/d_button"
        app:layout_constraintStart_toEndOf="@+id/nine_button"
        app:layout_constraintTop_toBottomOf="@+id/minus_button" />

    <Button
        android:id="@+id/d_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/d_button"
        app:layout_constraintBottom_toBottomOf="@+id/zero_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plus_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/delete_button"
        app:layout_constraintEnd_toStartOf="@+id/enter_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_button" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/enter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/d_button" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/plus_button"
        app:layout_constraintEnd_toStartOf="@+id/d_button"
        app:layout_constraintStart_toEndOf="@+id/three_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus_button"
        app:layout_constraintEnd_toStartOf="@+id/d_button"
        app:layout_constraintStart_toEndOf="@+id/six_button"
        app:layout_constraintTop_toBottomOf="@+id/plus_button" />

</android.support.constraint.ConstraintLayout>